Made version for 30s cooldown.

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "GiganticAmethyst",
-    "version_number": "1.0.0",
+    "version_number": "1.0.1L",
     "website_url": "https://github.com/RicoValdezio/GiganticAmethyst",
     "description": "Adds the Gigantic Amethyst, an equipment that resets ability cooldowns",
     "dependencies": [
